# Bluedroid_GATT_Server

./: CMakeLists.txt  Kconfig.projbuild  README.md  bluetooth.c  bluetooth.h  buzzer.c  buzzer.h  keypad.c  keypad.h  ldr.c  ldr.h  led.c  led.h  light.c  light.h  main.c  servo.c  servo.h  ultrasonic.c  ultrasonic.h
main/: CMakeLists.txt  main.c
main/include/: bluetooth.h  buzzer.h  keypad.h  ldr.h  led.h  light.h  servo.h  ultrasonic.h
main/source/: bluetooth.c  buzzer.c  ldr.c  led.c  light.c  servo.c  ultrasonic.c
